<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="always"/>
</menu>